--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^7.0.11",
+    "@react-navigation/native": "^7.0.6",
+    "@react-navigation/native-stack": "^7.1.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "appwrite": "^16.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-config": "^1.5.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-snackbar": "^2.8.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
