--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/native-stack": "^7.1.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "appwrite": "^16.0.2",
+    "axios": "^1.7.8",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-audio-recorder-player": "^3.6.12",
     "react-native-config": "^1.5.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.1",
     "react-native-reanimated": "^3.16.3",
