--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^7.0.11",
     "@react-navigation/drawer": "^7.0.13",
@@ -21,6 +22,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-collapsible": "^1.6.2",
     "react-native-config": "^1.5.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
